--- a/app.json
+++ b/app.json
@@ -2,6 +2,8 @@
   "expo": {
     "name": "wsa",
     "slug": "wsa",
+    "scheme": "wsa",
+    "description": "Women Safety App",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -23,6 +25,9 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      "expo-router"
+    ]
   }
 }
