--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.9",
     "expo-status-bar": "~2.0.0",
+    "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-native": "0.76.3",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-reanimated": "^3.16.3",
+    "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.1.0",
+    "tailwindcss": "^3.4.15",
     "wsa": "file:"
   },
   "devDependencies": {
